Portfolio Looking Glass

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,8 +1,10 @@
 ---
 import NavBar from '../components/NavBar.astro';
+import LookingGlass from '../components/LookingGlass.astro';
 ---
 
 <NavBar />
+<LookingGlass />
 
 <style>
 :root {
