--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,5 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
+import MainLayout from '../layouts/MainLayout.astro'
 ---
 
-<head> 	
-	<title>Neon Kaiser</title>
-</head>
-
-<main>
-    <MainLayout />
-</main>
+<MainLayout />
