fixed looking through the store

--- a/src/components/StoreInterior.astro
+++ b/src/components/StoreInterior.astro
@@ -74,11 +74,11 @@ import Face4 from './screens/Face4.astro'
 
   document.addEventListener('keydown', (e) => {
     if (e.key === 'ArrowLeft') {
-      currentFace = (currentFace + 1) % 4
+      currentFace = (currentFace + 1) 
       updateCubeRotation()
     }
     if (e.key === 'ArrowRight') {
-      currentFace = (currentFace - 1 + 4) % 4
+      currentFace = (currentFace - 1 )
       updateCubeRotation()
     }
   })
