--- a/src/components/StoreInterior.astro
+++ b/src/components/StoreInterior.astro
@@ -20,40 +20,40 @@ import Face4 from './screens/Face4.astro'
 }
 
 .cube-wrapper {
-  width: 600px;
-  height: 400px;
-  transform-style: preserve-3d;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
   perspective: 1200px;
-  overflow: visible;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
+  overflow: hidden;
 }
 
 .cube {
-  width: 100%;
-  height: 100%;
-  position: relative;
+  width: 100vw;
+  height: 100vh;
   transform-style: preserve-3d;
   transform: rotateY(var(--rotation));
   transition: transform 0.6s ease-in-out;
+  position: relative;
 }
 
 .face {
+  width: 100vw;
+  height: 100vh;
   position: absolute;
-  width: 500px;
-  height: 100%;
-  background: #1a1a1a;
-  color: white;
-  font-size: 2rem;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid #fff;
-  backface-visibility: hidden;
   transform-style: preserve-3d;
+  backface-visibility: hidden;
+  background: #1a1a1a;
+  color: white;
 }
+
 
 .face-1 { transform: rotateY(  0deg) translateZ(500px) rotateY(180deg); }
 .face-2 { transform: rotateY( 90deg) translateZ(500px) rotateY(180deg); }
