postioning fix face4desktop

--- a/src/components/screens/Face4Desktop.astro
+++ b/src/components/screens/Face4Desktop.astro
@@ -45,38 +45,39 @@
   .layer-bg {
     top: 0;
     left: 0;
-    width: 1280px;
-    height: 720px;
+    width: 100vw;
+    height: 100vh;
     z-index: 1;
   }
 
-  .layer-wall {
-    width: 1010px;
-    top: 10px;
-    left: 135px;
-    z-index: 2;
-  }
+.layer-wall {
+  width: 154.9%;
+  top: -41.61%;
+  left: -34.5%;
+  z-index: 2;
+}
 
-  .layer-avatar {
-    width: 400px;
-    top: 250px;
-    left: 680px;
-    z-index: 3;
-  }
+.layer-avatar {
+  width: 31.25%;
+  top: 34.72%;
+  left: 53.13%;
+  z-index: 3;
+}
 
-  .layer-bubble {
-    width: 320px;
-    top: 100px;
-    left: 850px;
-    z-index: 4;
-  }
+.layer-bubble {
+  width: 25%;
+  top: 13.89%;
+  left: 66.41%;
+  z-index: 4;
+}
 
-  .layer-counter {
-    width: 950px;
-    top: 470px;
-    left: 170px;
-    z-index: 5;
-  }
+.layer-counter {
+  width: 84.22%;
+  top: 71.28%;
+  left: 6.28%;
+  z-index: 5;
+}
+
 </style>
 
 <script is:inline>
