--- a/src/components/screens/Face4Desktop.astro
+++ b/src/components/screens/Face4Desktop.astro
@@ -1,11 +1,11 @@
 <div class="face-inner">
-  <div class="parallax-scene">
-    <div class="scene-canvas" id="parallax-scene">
-      <img src="/assets/window.png" alt="Background" class="layer layer-bg" />
-      <img src="/assets/shelf.png" alt="Shop wall" class="layer layer-wall" />
-      <img src="/assets/avatar.png" alt="Neon behind counter" class="layer layer-avatar" />
-      <img src="/assets/speech-bubble.png" alt="Speech bubble" class="layer layer-bubble" />
-      <img src="/assets/counter.png" alt="Counter" class="layer layer-counter" />
+  <div class="parallax-scene-4">
+    <div class="scene-canvas" id="parallax-scene-4">
+      <img src="/assets/face4/window.png" alt="Background" class="layer layer-bg" />
+      <img src="/assets/face4/shelf.png" alt="Shop wall" class="layer layer-wall" />
+      <img src="/assets/face4/avatar.png" alt="Neon behind counter" class="layer layer-avatar" />
+      <img src="/assets/face4/speech-bubble.png" alt="Speech bubble" class="layer layer-bubble" />
+      <img src="/assets/face4/counter.png" alt="Counter" class="layer layer-counter" />
     </div>
   </div>
 </div>
@@ -80,8 +80,8 @@
 
 </style>
 
-<script is:inline>
-  const scene = document.getElementById('parallax-scene')
+<!-- <script is:inline>
+  const scene = document.getElementById('parallax-scene-4')
   const layers = scene.querySelectorAll('.layer')
 
   document.addEventListener('mousemove', (e) => {
@@ -98,4 +98,4 @@
       layer.style.transform = `translate(${offsetX}px, ${offsetY}px)`
     })
   })
-</script>
+</script> -->
