--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -7,8 +7,10 @@ import StoreInterior from '../components/StoreInterior.astro'
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Milk n Toast</title>
+    <title>Neon's Konbini</title>
     <link rel="stylesheet" href="/styles/global.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
+
   </head>
   <body data-screen="exterior">
     <div class="exterior-wrapper">
